Webpage is complete. last bug fixed issue with css not loading properly on smaller screens. This version is fully compatible with mobile devices now. Polished the scripts to allow the contact form to reach my personal google sheet where i can give someone a call back if they leave a message. Made minor changes to style to look more visually appealing and easier to read. All links work and redirect to correct webpage.

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:'Monospace', sans-serif;
     box-sizing: border-box;
 }
 
@@ -12,9 +12,13 @@ html {
 }
 
 body {
-    background: navy;
-    color: white;
+    background: black;
+    color: whitesmoke;
     
+}
+
+body h1 {
+    font-size: 60px;
 }
 
 /* Header */
@@ -97,7 +101,7 @@ width: 100%;
 
 #about {
     padding: 80px 0;
-    color: aquamarine;
+    color: whitesmoke;
 }
 
 .row {
@@ -120,9 +124,9 @@ width: 100%;
 }
 
 .sub.title {
-    font-size: 60px;
+    font-size: 70px;
     font-weight: 600;
-    color: white;
+    color: whitesmoke;
 }
 
 .tab-titles {
@@ -160,7 +164,7 @@ width: 100%;
 
  
 .tab-contents ul li span {
-    color: red;
+    color: goldenrod;
     font-size: 14px;
 }
 
@@ -211,7 +215,7 @@ width: 100%;
 
 .services-list div a {
     text-decoration: none;
-    color: white;
+    color: whitesmoke;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
@@ -256,7 +260,7 @@ width: 100%;
 .layer {
     width: 100%;
     height: 0%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), white);
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgb(8, 80, 134));
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -283,7 +287,7 @@ width: 100%;
     text-decoration: none;
     font-size: 20px;
     line-height: 60px;
-    background: white;
+    background: whitesmoke;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -307,7 +311,7 @@ width: 100%;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color: white;
+    color: whitesmoke;
     transition: 0.7s;
 }
 
@@ -412,9 +416,10 @@ background-color: red;
     display: none;
  }
 
- @media only screen and (max-width 600px){
-    header {
-        background-image: url(./assets/images/brick4.png);
+ @media screen and (max-width: 600px){
+    
+    .logo{
+        width: 70px;
     }
     .header-text{
         margin-top: 100%;
@@ -458,6 +463,7 @@ background-color: red;
         }
         .about-col-1{
             margin-bottom: 30px;
+           
         }
         .about-col-2{
             font-size: 14px;
@@ -473,6 +479,10 @@ background-color: red;
         .copyright{
             font-size: 14px;
         }
+    }
 
-
-
+    #msg {
+        color: #61b752;
+        margin-top: -40px;
+        display: block;
+    }
